# jcode

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
crates/jcode-auth-types/src/: lib.rs
crates/jcode-build-support/src/: paths.rs
crates/jcode-compaction-core/src/: lib.rs
crates/jcode-config-types/src/: lib.rs
crates/jcode-desktop/: Cargo.toml
crates/jcode-desktop/src/: main.rs  main_tests.rs  session_data.rs  session_launch.rs  single_session.rs  single_session_render.rs  workspace.rs
crates/jcode-embedding/src/: lib.rs
crates/jcode-import-core/src/: lib.rs
crates/jcode-overnight-core/src/: lib.rs
crates/jcode-protocol/src/: lib.rs  notifications.rs
crates/jcode-protocol/src/protocol_tests/: comm_requests.rs  core_events.rs
crates/jcode-provider-core/src/: catalog_refresh.rs  lib.rs  selection.rs
crates/jcode-provider-metadata/src/: lib.rs
crates/jcode-provider-openrouter/src/: lib.rs
crates/jcode-tui-markdown/: Cargo.toml
crates/jcode-tui-markdown/src/: lib.rs  markdown_render_full.rs  markdown_render_lazy.rs
crates/jcode-tui-markdown/src/markdown_tests/cases/: rendering.rs  streaming_cache.rs
crates/jcode-tui-mermaid/: Cargo.toml  build.rs
crates/jcode-tui-mermaid/src/: lib.rs  mermaid_cache_render.rs  mermaid_content.rs  mermaid_debug.rs  mermaid_model.rs  mermaid_runtime.rs  mermaid_svg.rs  mermaid_viewport.rs
crates/jcode-tui-mermaid/src/mermaid_tests/: part_01.rs  part_02.rs
crates/jcode-tui-messages/src/: cache.rs
docs/: AWS_BEDROCK_PROVIDER.md  MERMAID_RENDERING_REDESIGN.md  ONBOARDING_SANDBOX.md  SECURITY_DEPENDENCIES.md  provider-model-catalog-audit.md
scripts/: auth_fixture.sh  cargo_exec.sh  code_size_budget.json  desktop_perf_report.py  dev_cargo.sh  mermaid_fit_probe.py  onboarding_sandbox.sh  panic_budget.json  remote_build.sh  remote_config.sh  security_preflight.sh  swallowed_error_budget.json  test_size_budget.json
src/: agent.rs  agent_tests.rs  background.rs  browser.rs  browser_tests.rs  bus.rs  compaction.rs  compaction_tests.rs  config.rs  config_tests.rs  lib.rs  logging.rs  network_retry.rs  overnight.rs  provider_catalog.rs  provider_catalog_tests.rs  server.rs  session.rs  side_panel_tests.rs  ssh_remote.rs  telemetry.rs  update.rs  usage.rs  usage_openai.rs
src/agent/: compaction.rs  environment.rs  provider.rs  tools.rs  turn_loops.rs  turn_streaming_broadcast.rs  turn_streaming_mpsc.rs
src/ambient/: runner.rs
src/auth/: antigravity.rs  copilot.rs  cursor.rs  doctor.rs  gemini.rs  google.rs  integration.rs  lifecycle.rs  lifecycle_driver.rs  mod.rs  oauth.rs  status_types.rs  test_sandbox.rs  tests.rs
src/auth/oauth_tests/: flow.rs
src/background/: tests.rs
src/cli/: args.rs  dispatch.rs  dispatch_tests.rs  login.rs  provider_init.rs  provider_init_tests.rs  tui_launch.rs
src/cli/args/: tests.rs
src/cli/auth_test/: probes.rs  run.rs  types.rs
src/cli/commands/: report_info.rs
src/cli/login/: scriptable.rs
src/cli/provider_init/: external_auth.rs
src/config/: config_file.rs  default_file.rs  env_overrides.rs
src/prompt/: system_prompt.md
src/protocol_tests/: core_events.rs
src/provider/: activation.rs  anthropic.rs  antigravity.rs  bedrock.rs  claude.rs  copilot.rs  copilot_tests.rs  cursor.rs  fingerprint.rs  gemini.rs  gemini_tests.rs  jcode.rs  mod.rs  openai.rs  openai_provider_impl.rs  openai_stream_runtime.rs  openrouter.rs  openrouter_provider_impl.rs  openrouter_sse_stream.rs  openrouter_tests.rs  selection.rs  startup.rs  state.rs  tests.rs
src/provider/openai/: stream.rs
src/provider/openai_tests/: parsing_tools.rs
src/provider/tests/: auth_refresh.rs  fallback_failover.rs  model_resolution.rs
src/server/: background_tasks.rs  client_actions.rs  client_actions_tests.rs  client_api.rs  client_lifecycle.rs  client_session.rs  client_state_tests.rs  comm_control.rs  comm_session.rs  comm_session_tests.rs  debug_session_admin.rs  file_activity_tests.rs  headless.rs  provider_control.rs  provider_control_tests.rs  reload_state.rs  state.rs  tests.rs
src/server/client_session_tests/resume/: busy_existing_attach.rs
src/session/: crash.rs
src/session_tests/: cases.rs  mod.rs
src/tool/: apply_patch.rs  bash.rs  communicate.rs  edit.rs  mcp.rs  mod.rs  read.rs  session_search.rs  side_panel_tests.rs  skill.rs  tests.rs  websearch.rs  write.rs
src/tool/selfdev/: mod.rs  reload.rs  tests.rs
src/tui/: app.rs  backend.rs  info_widget.rs  info_widget_model.rs  mod.rs  session_picker_tests.rs  ui.rs  ui_diagram_pane.rs  ui_inline_interactive.rs  ui_messages.rs  ui_messages_cache.rs  ui_overlays.rs  ui_pinned.rs  ui_pinned_layout.rs  ui_pinned_tests.rs  ui_pinned_utils.rs  ui_prepare.rs  ui_viewport.rs
src/tui/app/: auth.rs  auth_account_commands.rs  auth_account_picker.rs  auth_tests.rs  auth_types.rs  commands.rs  conversation_state.rs  helpers.rs  helpers_tests.rs  inline_interactive.rs  input.rs  local.rs  model_context.rs  navigation.rs  remote.rs  remote_notifications.rs  remote_tests.rs  run_shell.rs  state_ui.rs  state_ui_input_helpers.rs  tests.rs  tests_input_scroll.rs  tui_lifecycle.rs  tui_state.rs  turn.rs
src/tui/app/inline_interactive/: openers.rs
src/tui/app/remote/: input_dispatch.rs  key_handling.rs  server_events.rs
src/tui/app/tests/: remote_events_reload_04.rs  state_model_poke_03.rs
src/tui/app/tests/remote_events_reload_01/: part_01.rs
src/tui/app/tests/remote_events_reload_02/: part_01.rs
src/tui/app/tests/remote_startup_input_01/: part_01.rs  part_02.rs
src/tui/app/tests/remote_startup_input_02/: part_01.rs
src/tui/app/tests/scroll_copy_01/: part_01.rs
src/tui/app/tests/state_model_poke_01/: part_01.rs
src/tui/app/tests/support_failover/: part_01.rs
src/tui/session_picker/: loading.rs  loading_tests.rs  render.rs
src/tui/ui_prepare/: tests.rs
src/tui/ui_tests/: basic.rs
src/tui/ui_tests/basic/: input_layout.rs
src/tui/ui_tests/diagrams/: part_01.rs  part_02.rs
src/usage/: cache.rs  provider_fetch.rs  tests.rs
tests/: auth_login_flow.rs  provider_matrix.rs
