[package]
name = "jcode-desktop"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1"
arboard = "3"
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
pollster = "0.3"
pulldown-cmark = "0.12"
serde_json = "1"
wgpu = "0.19"
winit = "0.29"

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
whoami = "1"
